@@ -32,21 +32,7 @@ ext['hibernate-validator.version'] = '6.1.5.Final'
 ext['log4j2.version'] = '2.21.1'
 
 
-dependencyManagement {
-    imports {
-        mavenBom(releaseMode ? 'com.epam.reportportal:commons-bom:' + '5.11.7' : 'com.epam.reportportal:commons-bom:5.11.7')
-    }
-}
-
 dependencies {
-    if (releaseMode) {
-        api 'com.epam.reportportal:commons-dao'
-        api 'com.epam.reportportal:commons'
-    } else {
-        api 'com.github.reportportal:commons-dao:215668f'
-        api 'com.github.reportportal:commons:287df6c'
-    }
-
     //Fix CVE-2021-41079, CVE-2022-23181, CVE-2021-33037, CVE-2021-30640, CVE-2022-42252, CVE-2023-46589, CVE-2024-24549
     implementation 'org.apache.tomcat.embed:tomcat-embed-core:9.0.86'
     implementation 'org.apache.tomcat.embed:tomcat-embed-el:9.0.86'
@@ -59,7 +45,11 @@ dependencies {
     api 'org.apache.httpcomponents:httpclient:4.5.14'
     //Fix CVE-2022-40152
     api 'com.fasterxml.woodstox:woodstox-core:6.5.1'
-
+    implementation('org.springframework.boot:spring-boot-starter-data-jpa') {
+        exclude group: 'org.hibernate', module: 'hibernate-core'
+    }
+    implementation 'org.postgresql:postgresql:42.7.3'
+    api 'org.jasypt:jasypt:1.9.3'
     api 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     api 'org.springframework.boot:spring-boot-starter-security'
@@ -69,13 +59,25 @@ dependencies {
     //Fix CVE-2023-40827, CVE-2023-40828, CVE-2023-40826
     implementation 'org.springframework:spring-webmvc:5.3.39'
     implementation 'org.springframework:spring-web:5.3.39'
+    implementation "org.apache.commons:commons-lang3:${commonsLangVersion}"
+    implementation 'net.coobird:thumbnailator:0.4.20'
+    implementation("org.apache.tika:tika-core:3.0.0")
+
+    implementation "software.amazon.awssdk:aws-core:${aws}"
+    implementation "software.amazon.awssdk:sts:${aws}"
+    api "org.apache.jclouds.api:s3:${jclouds}" // 2.6.0 switched to jakarta annotations!
+    implementation "org.apache.jclouds.provider:aws-s3:${jclouds}"
+    implementation "org.apache.jclouds.api:filesystem:${jclouds}"
+    api('commons-validator:commons-validator:1.6') {
+        exclude group: 'commons-beanutils', module: 'commons-beanutils'
+    }
 
     ///// Security
     //https://nvd.nist.gov/vuln/detail/CVE-2020-5407 AND https://nvd.nist.gov/vuln/detail/CVE-2020-5408
     implementation 'org.springframework.security:spring-security-core:5.8.16'
     implementation 'org.springframework.security:spring-security-config:5.8.16'
     implementation 'org.springframework.security:spring-security-web:5.8.16'
-    implementation 'org.springframework:spring-jdbc:6.1.5'
+    implementation 'org.springframework:spring-jdbc:5.3.33'
     //
 
     api 'org.springframework.security:spring-security-oauth2-client'
@@ -108,7 +110,7 @@ dependencies {
     // TODO: snakeyaml 2.0 supported by Spring Boot 2.7 and 3.X only
     // We don't user application.yml, so it's safe to use 2.2
     implementation 'org.yaml:snakeyaml:2.2'
-    implementation 'org.hibernate:hibernate-core:5.4.24.Final'
+    implementation 'org.hibernate:hibernate-core:5.6.15.Final'
     implementation 'org.springframework:spring-core:5.3.39'
     implementation "com.rabbitmq:http-client:5.2.0"
 
@@ -117,6 +119,21 @@ dependencies {
     annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
     testCompileOnly "org.projectlombok:lombok:${lombokVersion}"
     testAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"
+
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.flywaydb.flyway-test-extensions:flyway-spring-test:6.1.0'
+
+    // testImplementation 'org.springframework.boot:spring-boot-testcontainers:' // spring boot 3.1+
+    // compileOnly("org.springframework.boot:spring-boot-devtools")
+    implementation platform("org.testcontainers:testcontainers-bom:${testContainers}")
+    testImplementation "org.testcontainers:junit-jupiter:${testContainers}"
+    testImplementation "org.testcontainers:postgresql:${testContainers}"
+    testImplementation("org.testcontainers:minio:${testContainers}")
+
+}
+
+tasks.register('updateSubmodule', Exec) {
+    commandLine 'git', 'submodule', 'update', '--init'
 }
 
 processResources {
@@ -141,6 +158,18 @@ bootJar {
 jar.enabled(true)
 jar.archiveClassifier.set('')
 
+test {
+    jvmArgs '--add-opens=java.base/java.lang=ALL-UNNAMED' // TODO: remove in Spring Boot 3
+    useJUnitPlatform()
+    testLogging {
+        events = ["failed"]
+        exceptionFormat = "short"
+    }
+}
 
 publish.dependsOn build
 publish.mustRunAfter build
+
+tasks.preTagCommit.enabled = false
+tasks.updateVersion.enabled = false
+tasks.commitNewVersion.enabled = false
